--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -4,36 +4,29 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-
-group = 'co.edu.uniquindio'
+group = 'co.edu.uniquindio.ejemplo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
-
 
 repositories {
     mavenCentral()
     maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
 
-
 ext {
     set('springCloudVersion', "2022.0.1")
 }
 
-
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
 
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
     }
 }
-
 
 tasks.named('test') {
     useJUnitPlatform()
