--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,19 +1,40 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.0.2'
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group 'org.example'
-version 'unspecified'
+
+group = 'co.edu.uniquindio'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '17'
+
 
 repositories {
     mavenCentral()
+    maven { url 'https://artifactory-oss.prod.netflix.net/artifactory/maven-oss-candidates' }
 }
+
+
+ext {
+    set('springCloudVersion', "2022.0.1")
+}
+
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-test {
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
+
+tasks.named('test') {
     useJUnitPlatform()
 }
